# ui/openapi.json
@@ -2131,9 +2131,9 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/GuarantorInviteDocumentIn"
+                "$ref": "#/components/schemas/Body_upload_guarantor_invite_documents_guarantor_invite__token__documents_post"
               }
             }
           }
@@ -2914,6 +2914,25 @@
         ],
         "title": "AuthResponse"
       },
+      "Body_upload_guarantor_invite_documents_guarantor_invite__token__documents_post": {
+        "properties": {
+          "document_type": {
+            "type": "string",
+            "title": "Document Type"
+          },
+          "file": {
+            "type": "string",
+            "format": "binary",
+            "title": "File"
+          }
+        },
+        "type": "object",
+        "required": [
+          "document_type",
+          "file"
+        ],
+        "title": "Body_upload_guarantor_invite_documents_guarantor_invite__token__documents_post"
+      },
       "Body_upload_lease_document_portal_lease_upload_post": {
         "properties": {
           "file": {
@@ -3471,53 +3490,6 @@
         },
         "type": "object",
         "title": "GuarantorInviteDeclineIn"
-      },
-      "GuarantorInviteDocumentIn": {
-        "properties": {
-          "document_type": {
-            "type": "string",
-            "maxLength": 64,
-            "minLength": 1,
-            "title": "Document Type"
-          },
-          "filename": {
-            "type": "string",
-            "maxLength": 255,
-            "minLength": 1,
-            "title": "Filename"
-          },
-          "content_type": {
-            "type": "string",
-            "maxLength": 128,
-            "minLength": 1,
-            "title": "Content Type"
-          },
-          "byte_size": {
-            "type": "integer",
-            "minimum": 1.0,
-            "title": "Byte Size"
-          },
-          "storage_key": {
-            "type": "string",
-            "maxLength": 512,
-            "minLength": 1,
-            "title": "Storage Key"
-          },
-          "metadata_json": {
-            "additionalProperties": true,
-            "type": "object",
-            "title": "Metadata Json"
-          }
-        },
-        "type": "object",
-        "required": [
-          "document_type",
-          "filename",
-          "content_type",
-          "byte_size",
-          "storage_key"
-        ],
-        "title": "GuarantorInviteDocumentIn"
       },
       "GuarantorInviteOut": {
         "properties": {
